Fixed marker when out of bounds

--- a/templates/map-view/map-view.css
+++ b/templates/map-view/map-view.css
@@ -77,8 +77,16 @@
           padding: 6px 12px;
           box-shadow: 2px 2px 6px 0 rgba(0 0 0 / 10%);
 
-          /* triangle */
-          &::after {
+          &:hover {
+            color: var(--blue);
+            background: var(--yellow);
+
+            &::after { /* triangle */
+              border-top: 8px solid var(--yellow);
+            }
+          }
+
+          &::after { /* triangle */
             content: '';
             position: absolute;
             left: 50%;
@@ -96,47 +104,24 @@
           &.active {
             box-shadow: 2px 2px 10px 0 rgba(0 0 0 / 60%);
             padding: 0;
+            background: var(--blue);
+            color: var(--yellow);
             span { display: none }
             
+            &::after { /* triangle */
+              border-top: 8px solid var(--blue);
+            }
+
             .details {
               display: block;
               width: 230px;
               text-align: center;
               
-              a.close {
-                background: transparent;
-                display: block;
-                height: 32px;
-                position: fixed;
-                right: 8px;
-                top: 4px;
-                width: 20px;
-                z-index: 1;
-
-                &::before, &::after {
-                  border-top: 1px solid #fff;
-                  content: '';
-                  display: block;
-                  position: absolute;
-                  inset: 0;
-                  height: 0;
-                  margin: auto;
-                  width: inherit;
-                  transform: rotate(45deg);
-                  transform-origin: center;
-                }
-                &::after { transform: rotate(-45deg) }
-                
-                &:hover {
-                  &::before, &::after { border-top: 2px solid #fff }
-                }
-              }
-
               h4 { /* model name */
                 font-family: roboto, Arial, sans-serif;
                 font-size: 18px;
                 font-weight: 500;
-                padding: 24px 0 0;
+                padding: 16px 0 0;
               }
 
               
@@ -247,6 +232,7 @@
           gap: 20px;
           margin: 20px 0;
           padding: 0 10px;
+          transition: all 400ms ease-in-out;
           
           @media (min-width: 990px) {
             padding: 0;
